yuichan/yuiparser.py
# Source
from dataclasses import dataclass
from typing import List, Optional, Dict, Any, Union
from types import FunctionType
from abc import ABC, abstractmethod
from typing import Union, Any, List
import re
import json
import os

from .yuiast import (
    YuiError, ASTNode, set_from_outside,
    NameNode,
    StringNode, NumberNode, ArrayNode, ObjectNode,
    MinusNode, ArrayLenNode,
    FuncAppNode, GetIndexNode, BinaryNode,
    AssignmentNode, IncrementNode, DecrementNode, AppendNode,
    BlockNode, PrintExpressionNode, PassNode,
    IfNode, BreakNode, RepeatNode, FuncDefNode, ReturnNode,
    AssertNode,
)

def get_example_from_pattern(pattern: str) -> str:
    """正規表現パターンからそのパターンにマッチする文字列の例（最初の例）を取得する"""
    # エスケープされた文字を一時的に置換
    pattern = pattern.replace(r'\|', '▁｜▁') 
    pattern = pattern.replace(r'\[', '▁［▁') 
    pattern = pattern.replace(r'\]', '▁］▁') 
    pattern = pattern.replace(r'\*', '▁＊▁') 
    pattern = pattern.replace(r'\?', '▁？▁') 
    pattern = pattern.replace(r'\+', '▁＋▁')
    pattern = pattern.replace(r'+', '') # 
    pattern = pattern.replace(r'*', '?') #
    example = get_example_from_pattern_inner(pattern)
    # 置換した文字を元に戻す
    example = example.replace('▁｜▁', r'|')
    example = example.replace('▁［▁', r'[')
    example = example.replace('▁］▁', r']')
    example = example.replace('▁＊▁', r'*')
    example = example.replace('▁？▁', r'?')
    example = example.replace('▁＋▁', r'+')
    return example

def get_example_from_pattern_inner(pattern: str)-> str:
    if pattern == "":
        return ""
    # 選択肢（|）の処理：最初の選択肢を使用
    if "|" in pattern:
        pattern = pattern.split("|")[0]
    
    # 文字クラス [abc] の処理 
    if pattern.startswith("["):
        end_pos = pattern.find("]")
        head = pattern[1:end_pos]
        tail = pattern[end_pos+1:]
        if tail.startswith("?"):
            return get_example_from_pattern_inner(tail[1:])
        head_char = get_example_from_pattern_inner(head)[0]
        return head_char + get_example_from_pattern_inner(tail)
    if pattern.startswith("\\"):
        # エスケープシーケンスの処理
        next_char = pattern[1]
        remaining = pattern[2:]
        if remaining.startswith("?"):
            return get_example_from_pattern_inner(remaining[1:])
        if next_char == '\\':  # バックスラッシュ
            char = '\\'
        elif next_char == 's':  # 空白文字
            char = ' '
        elif next_char == 't':  # タブ
            char = '\t'
        elif next_char == 'n':  # 改行
            char = '\n'
        elif next_char == 'r':  # キャリッジリターン
            char = '\r'
        elif next_char == 'd':  # 数字
            char = '1'
        elif next_char == 'w':  # 単語文字
            char = 'a'
        else:
            char = next_char
        return char + get_example_from_pattern_inner(remaining)
    char = pattern[0]
    remaining = pattern[1:]
    if remaining.startswith("?"):
        return get_example_from_pattern_inner(remaining[1:])
    return char + get_example_from_pattern_inner(remaining)

def is_all_alnum(s: str) -> bool:
    for ch in s:
        if not (('a' <= ch <= 'z') or ('A' <= ch <= 'Z') or ('0' <= ch <= '9') or (ch == '_')):
            return False
    return True

def load_syntax(filepath: Optional[str] = None) -> Dict[str, str]:
    """JSON文法ファイルから終端記号をロードする"""
    if filepath is None:
        filepath = "syntax-yui.json"

    if not os.path.exists(filepath):
        # デフォルト: yuichanフォルダのsyntax-yui.json
        current_dir = os.path.dirname(os.path.abspath(__file__))
        filepath = os.path.join(current_dir, filepath)

    with open(filepath, 'r', encoding='utf-8') as f:
        terminals = json.load(f)
    
    if 'keywords' not in terminals:
        keywords = set()
        for key, pattern in terminals.items():
            word = get_example_from_pattern(pattern).strip()
            if is_all_alnum(word):
                if word not in keywords:
                    keywords.add(word)
        terminals['keywords'] = keywords
    return terminals

@dataclass
class SourceNode(ASTNode):
    """
    null値（?）を表すノード
    """
    def __init__(self):
        super().__init__()

    def evaluate(self, runtime):
        return 0

class Source(object):
    """ソースコード"""
    def __init__(self, source: str, filename: str = "main.yui", pos: int = 0, syntax = 'syntax-yui.json'):
        self.filename = filename
        self.source = source
        self.pos = pos
        self.length = len(source)
        if isinstance(syntax, dict):
            self.terminals = syntax.copy()
        else:
            self.terminals = load_syntax(syntax)
        self.memos = {}
        self.backtrack = True

    def update_syntax(self, **kwargs):
        self.terminals.update(kwargs)
    
    def get_memo(self, nonterminal: str, pos: int):
        """Pakrat parsingのメモを取得する"""
        return self.memos.get((nonterminal, pos), None) 
    
    def set_memo(self, nonterminal: str, pos: int, result: Any, new_pos: int):
        """Pakrat parsingのメモを設定する"""
        self.memos[(nonterminal, pos)] = (result, new_pos)

    def has_next(self):
        return self.pos < self.length

    def is_eos(self):
        return self.pos >= self.length

    def consume_string(self, text: str):
        if self.source.startswith(text, self.pos):
            self.pos += len(text)
            return True
        return False

    def is_defined(self, terminal: str) -> bool:
        return self.terminals.get(terminal, "") != ""

    def is_match(self, terminal: str, if_undefined:Union[bool, str]=False, 
                 unconsumed=False, lskip_ws=False,
                 skip_ws = False, skip_linefeed=False, next_alpha=False):
        if isinstance(if_undefined, bool) and not self.is_defined(terminal):
            return if_undefined
        pattern = self.terminals.get(terminal, if_undefined if isinstance(if_undefined, str) else "")    
        if isinstance(pattern, str):
            try:
                pattern = re.compile(pattern)
            except re.error:
                raise ValueError(f"Invalid regex pattern for terminal '{terminal}': {pattern}")
        saved_pos = self.pos    
        if lskip_ws:
            self.skip_whitespaces_and_comments()
        match_result = pattern.match(self.source, self.pos)
        if match_result:
            match_length = match_result.end() - match_result.start()
            if unconsumed:
                self.pos = saved_pos
                return True
            self.pos += match_length
            if skip_ws or skip_linefeed:
                if next_alpha and self.pos - 1 >= 0 and 'A' <= self.source[self.pos - 1] <= 'z':
                    self.try_match("whitespace", if_undefined=r"[ \t\r]")
                self.skip_whitespaces_and_comments(include_linefeed=skip_linefeed)
            return True
        self.pos = saved_pos
        return False
    
    def first_candidate(self, terminal: str) -> str:
        pattern = self.terminals.get(terminal, "")
        if isinstance(pattern, str):
            pattern = re.compile(pattern)
            self.terminals[terminal] = pattern
        return get_example_from_pattern(pattern.pattern)

    def try_match(self, terminal: str, if_undefined=True, unconsumed=False, avoid_backtrack=False,
              skip_ws = False, skip_linefeed=False, opening_pos: int = None, lskip_ws=False):
        if self.is_match(terminal, if_undefined=if_undefined, unconsumed=unconsumed,
                         skip_ws=skip_ws, skip_linefeed=skip_linefeed,
                         lskip_ws=lskip_ws):
            return
        candidate = self.first_candidate(terminal)
        snippet = self.source[self.pos:self.pos+10].replace('\n', '\\n')
        if opening_pos is not None:
            raise YuiError(("expected", "closing", f"`{candidate}`", f"❌`{snippet}`"), self.p(start_pos=opening_pos), avoid_backtrack=False)
        raise YuiError(("expected", f"`{candidate}`", f"❌`{snippet}`"), self.p(length=1), avoid_backtrack=avoid_backtrack)

    def find_match(self, terminal: str, suffixes: List[str], skip_ws = False, skip_linefeed=False, lskip_ws=False):
        for suffix in suffixes:
            key = f"{terminal}{suffix}"
            if self.is_match(key, if_undefined=False, unconsumed=False, 
                             skip_ws=skip_ws, skip_linefeed=skip_linefeed, lskip_ws=lskip_ws):
                return suffix
        return None

    def match_eos_or_linefeed(self, lskip_ws=False, unconsumed=False):
        saved_pos = self.pos    
        if lskip_ws:
            self.skip_whitespaces_and_comments()
        if self.is_eos():
            if unconsumed:
                self.pos = saved_pos
            return True
        return self.is_match("linefeed", lskip_ws=lskip_ws, unconsumed=unconsumed)

    def consume_until(self, terminal:str, until_eof=True, disallow_string:str=None):
        pattern = self.terminals[terminal]
        if isinstance(pattern, str):
            pattern = re.compile(pattern)
            self.terminals[terminal] = pattern
        pattern = re.compile(pattern)
        match_result = pattern.search(self.source, self.pos)
        if match_result:
            self.pos = match_result.start()
            if disallow_string:
                if disallow_string in self.source[self.pos:match_result.start()]:
                    return False
            return True
        if until_eof:
            self.pos = self.length
            return True
        return False

    def skip_whitespaces_and_comments(self, include_linefeed=False):
        """空白文字とコメントをスキップする"""
        while self.has_next():
            if self.is_match("whitespaces", if_undefined=r"[ \t\r]+"):
                continue
            if include_linefeed and self.is_match("linefeed", if_undefined=r"\n"):
                continue
            if self.is_match("line-comment-begin", if_undefined=False):
                self.consume_until("linefeed", until_eof=True)
                continue
            if self.is_defined("comment-begin") and self.is_defined("comment-end"):
                opening_pos = self.pos
                if self.is_match("comment-begin"):
                    self.consume_until("comment-end", until_eof=True)
                    self.try_match("comment-end", opening_pos=opening_pos)
                    continue
            break

    def capture_indent(self, indent_chars: str = " \t　"):
        start_pos = self.pos - 1
        # 行の先頭位置を探す
        while 0 <= start_pos:
            char = self.source[start_pos]
            if char == '\n':
                start_pos += 1
                break
            start_pos -= 1
        end_pos = start_pos
        while end_pos < self.length:
            char = self.source[end_pos]
            if char in indent_chars:
                end_pos += 1
            else:
                break
        return self.source[start_pos:end_pos]

    def capture_line(self):
        start_pos = self.pos
        while self.pos < self.length:
            char = self.source[self.pos]
            if char == '\n':
                return self.source[start_pos:self.pos]
            self.pos += 1
        return self.source[start_pos:]

    def capture_comment(self):
        """コメントを位置を変えずに習得する。行コメントとブロックコメントの両方に対応。"""
        save_pos = self.pos
        self.is_match("whitespaces", if_undefined=r"[ \t\r]+")
        comment = None
        if self.is_match("line-comment-begin", if_undefined=False):
            start_pos = self.pos
            self.consume_until("linefeed", until_eof=True)
            comment =self.source[start_pos:self.pos]
        if self.is_match("comment-begin", if_undefined=False):
            start_pos = self.pos
            self.consume_until("comment-end", until_eof=True)
            comment = self.source[start_pos:self.pos]
        self.pos = save_pos # コメントは位置を変えずに取得
        return comment

    def p(self, node: ASTNode = None, 
          start_pos: int = None, end_pos: int = None, length: int = 0) -> ASTNode:
        node = node or SourceNode()
        node.filename = self.filename
        node.source = self.source
        #node.comment = self.capture_comment()

        save_pos = self.pos
        if start_pos is not None:
            node.pos = start_pos
            if end_pos is not None:
                node.end_pos = end_pos
            elif length != 0:
                node.end_pos = min(start_pos + length, self.length)
            else:
                node.end_pos = save_pos           
        elif length != 0:
            node.pos = self.pos
            node.end_pos = min(self.pos + length, self.length)
        else:
            node.pos = max(self.pos-1, 0)
            node.end_pos = self.pos
        return node

NONTERMINALS = {}

class ParserCombinator(object):

    def quick_check(self, source: Source) -> bool:
        return True
    
    def match(self, source: Source, pc: dict):
        return True

def parse(nonterminal: str, source: Source, pc: dict, avoid_backtrack=False,
          skip_ws: bool = False, skip_linefeed: bool = False, lskip_ws=False) -> Any:
    global NONTERMINALS
    patterns = NONTERMINALS[nonterminal]
    saved_pos = source.pos
    if lskip_ws:
        source.skip_whitespaces_and_comments()
    if isinstance(patterns, ParserCombinator):
        memo = source.get_memo(nonterminal, source.pos)
        if memo is not None:
            source.pos = memo[1]
            result = memo[0]
        else:
            saved_pos = source.pos
            try:
                result = patterns.match(source, pc)
                source.set_memo(nonterminal, saved_pos, result, source.pos)
            except YuiError as e:
                if avoid_backtrack:
                    e.avoid_backtrack = True
                raise e
        if skip_ws or skip_linefeed:
            source.skip_whitespaces_and_comments(include_linefeed=skip_linefeed)
        return result
    else:
        saved_pos = source.pos
        raise YuiError(("undefined", f"`{nonterminal}`"), source.p(length=1))

def is_parsable(nonterminal: str, source: Source, pc: dict, lskip_ws=False) -> bool:
    try:
        parse(nonterminal, source, pc, lskip_ws=lskip_ws)
        return True
    except YuiError:
        return False

class BooleanParser(ParserCombinator):

    def quick_check(self, source: Source) -> bool:
        return source.is_match("boolean-true", if_undefined=False) or source.is_match("boolean-false", if_undefined=False)
    
    def match(self, source: Source, pc: dict):
        saved_pos = source.pos
        if source.is_match("boolean-true", if_undefined=False):
            return source.p(NumberNode(1), start_pos=saved_pos)
        if source.is_match("boolean-false", if_undefined=False):
            return source.p(NumberNode(0), start_pos=saved_pos)
        raise YuiError(("expected", "boolean"), source.p(length=1))

NONTERMINALS["@Boolean"] = BooleanParser()

class NumberParser(ParserCombinator):

    def quick_check(self, source: Source) -> bool:
        return source.is_match("number-begin", if_undefined=r"[0-9]", unconsumed=True)
    
    def match(self, source: Source, pc: dict):
        saved_pos = source.pos
        if source.is_match("number-begin", if_undefined=r"[0-9]"):
            source.try_match("number-chars", if_undefined=r"[0-9]")
            if source.is_match("number-dot-char", if_undefined=r"\."):
                source.try_match("number-begin", avoid_backtrack=True)
                source.try_match("number-chars")
                number = source.source[saved_pos:source.pos]
                return source.p(NumberNode(float(number)), start_pos=saved_pos)
            else:
                number = source.source[saved_pos:source.pos]
            return source.p(NumberNode(int(number)), start_pos=saved_pos)
        raise YuiError(("expected", pc.get("expected", "number")), source.p(length=1))

NONTERMINALS["@Number"] = NumberParser()

class StringParser(ParserCombinator):

    def quick_check(self, source: Source) -> bool:
        return source.is_match("string-begin", if_undefined=r'"', unconsumed=True)
    
    def match(self, source: Source, pc: dict):
        opening_pos = source.pos
        if source.is_match("string-begin", if_undefined=r'"'):
            string_content = []
            expression_count = 0
            while source.pos < source.length:
                source.consume_until("string-content-end", until_eof=True)
                string_content.append(source.source[opening_pos:source.pos])
                if source.is_match("string-end"):
                    if expression_count == 0:
                        string_content = ''.join(string_content)
                    return source.p(StringNode(string_content), start_pos=opening_pos)
                if source.is_match("string-escape"):
                    if source.is_eos():
                        raise YuiError(("bad", "escape sequence"), source.p(length=1), avoid_backtrack=True)
                    next_char = source.source[source.pos]
                    source.pos += 1
                    if next_char == 'n':
                        string_content.append('\n')
                    elif next_char == 't':
                        string_content.append('\t')
                    else:
                        string_content.append(next_char)
                    continue
                start_inter_pos = source.pos
                if source.is_match("string-interpolation-begin", skip_ws=True):
                    expression = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack = True)
                    source.try_match("string-interpolation-end", opening_pos=start_inter_pos, avoid_backtrack = True)
                    string_content.append(expression)
                    expression_count += 1
                    continue
            candidate = source.first_candidate("string-end")
            raise YuiError(("expected", "closing", f"`{candidate}`"), source.p(start_pos=opening_pos), avoid_backtrack = True)
        raise YuiError(("expected", pc.get("expected", "string")), source.p(length=1), avoid_backtrack = True)

NONTERMINALS["@String"] = StringParser()

class ArrayParser(ParserCombinator):

    def quick_check(self, source: Source) -> bool:
        return source.is_match("array-begin", if_undefined=r"\[", unconsumed=True)
    
    def match(self, source: Source, pc: dict):
        opening_pos = source.pos
        if source.is_match("array-begin", if_undefined=r"\[", skip_linefeed=True):
            arguments = []
            while not source.is_match("array-end", if_undefined=r"\]", unconsumed=True):
                arguments.append(parse("@Expression", source, pc, skip_linefeed=True, avoid_backtrack=True))
                if source.is_match("array-end", if_undefined=r"\]"):
                    return source.p(ArrayNode(arguments), start_pos=opening_pos)
                if source.is_match("array-separator", skip_linefeed=True):
                    continue
                break
            if is_parsable("@Expression", source, pc):
                candidate = source.first_candidate("array-separator")
                raise YuiError(("expected", f"`{candidate}`"), source.p(length=1))
            source.try_match("array-end", if_undefined=r"\]", opening_pos=opening_pos)
            return source.p(ArrayNode(arguments), start_pos=opening_pos)
        raise YuiError(("expected", "array"), source.p(length=1))

NONTERMINALS["@Array"] = ArrayParser()

class ObjectParser(ParserCombinator):
    def quick_check(self, source: Source) -> bool:
        return source.is_match("object-begin", if_undefined=r"\{", unconsumed=True)
    
    def match(self, source: Source, pc: dict):
        opening_pos = source.pos
        if source.is_match("object-begin", if_undefined=r"\{", skip_linefeed=True):
            arguments = []
            while not source.is_match("object-end", if_undefined=r"\}", unconsumed=True):
                arguments.append(parse("@String", source, pc, skip_linefeed=True, avoid_backtrack=True))
                source.try_match("object-key-value-separator", if_undefined=r"\:", skip_linefeed=True, avoid_backtrack=True)
                arguments.append(parse("@Expression", source, pc, skip_linefeed=True, avoid_backtrack=True))
                if source.is_match("object-end", if_undefined=r"\}"):
                    return source.p(ObjectNode(arguments), start_pos=opening_pos)
                if source.is_match("object-separator", skip_linefeed=True):
                    continue
                break
            if is_parsable("@String", source, pc):
                candidate = source.first_candidate("object-separator")
                raise YuiError(("expected", f"`{candidate}`"), source.p(length=1), avoid_backtrack=True)
            source.try_match("object-end", if_undefined=r"\}", opening_pos=opening_pos)
            return source.p(ObjectNode(arguments), start_pos=opening_pos)
        raise YuiError(("expected", pc.get("expected", "object")), source.p(length=1))

NONTERMINALS["@Object"] = ObjectParser()

class NameParser(ParserCombinator):

    def quick_check(self, source: Source) -> bool:
        if source.is_defined("keywords"):
            for keyword in source.terminals["keywords"]:
                if source.is_match(keyword, if_undefined=False, unconsumed=True):
                    return False
        return source.is_match("identifier-begin", if_undefined=r"[A-Za-z_]", unconsumed=True) or source.is_match("extra-identifier-begin", if_undefined=True, unconsumed=True)

    def match(self, source: Source, pc: dict):
        if source.is_match("extra-identifier-begin", if_undefined=False):
            start_pos = source.pos
            source.consume_until("extra-identifier-end", disallow_string="\n")
            name = source.source[start_pos:source.pos]
            node = source.p(NameNode(name), start_pos=start_pos)
            source.try_match("extra-identifier-end", opening_pos=start_pos-1)
            return node
        start_pos = source.pos
        if source.is_match("identifier-begin", if_undefined=r"[A-Za-z_]"):
            source.try_match("identifier-chars", if_undefined=r"[A-Za-z0-9_]*")
            source.try_match("identifier-end", if_undefined=True)
            name = source.source[start_pos:source.pos]
            return source.p(NameNode(name), start_pos=start_pos)
        raise YuiError(("expected", pc.get("expected", "identifier")), source.p(length=1))

NONTERMINALS["@Name"] = NameParser()

LITERALS = [
    "@Number",
    "@String",
    "@Array",
    "@Object",
    "@Boolean",
]

class TermParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        opening_pos = source.pos
        if source.is_match("group-begin", skip_ws=True):
            expression_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=True)
            source.try_match("group-end", skip_ws=True, opening_pos=opening_pos)
            return expression_node
        if source.is_match("length-begin", skip_ws=True):
            expression_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=True)
            source.try_match("length-end", skip_ws=True, opening_pos=opening_pos)
            return source.p(ArrayLenNode(expression_node), start_pos=opening_pos)
        for literal in LITERALS:
            if NONTERMINALS[literal].quick_check(source):
                source.pos = opening_pos
                return parse(literal, source, pc)
        return parse("@Name", source, pc)

NONTERMINALS["@Term"] = TermParser()

class PrimaryParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        if source.is_match('unary-', if_undefined=False):
            node = parse('@Primary', source, pc, avoid_backtrack=True)
            return source.p(MinusNode(node), start_pos=start_pos)
        if source.is_match('unary-inspection', if_undefined=False):
            node = parse('@Primary', source, pc, avoid_backtrack=True)
            return source.p(PrintExpressionNode(node, inspection=True), start_pos=start_pos)
        node = parse("@Term", source, pc)
        while source.has_next():
            opening_pos = source.pos
            if source.is_match("funcapp-args-begin", if_undefined=r"\(", skip_linefeed=True):
                arguments = []
                while not source.is_match("funcapp-args-end", if_undefined=r"\)", skip_ws=True, unconsumed=True):
                    arguments.append(parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=True))
                    if source.is_match("funcapp-args-separator", if_undefined=r"\,", skip_linefeed=True):
                        continue
                    break
                source.try_match("funcapp-args-end", if_undefined=r"\)", skip_ws=True, opening_pos=opening_pos)
                node = source.p(FuncAppNode(node, arguments), start_pos=start_pos)
                continue
            if source.is_match("array-index-begin", skip_ws=True):
                index_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=True)
                source.try_match("array-index-end", skip_ws=True, opening_pos=opening_pos)
                node = source.p(GetIndexNode(node, index_node), start_pos=start_pos)
                continue
            save_pos = source.pos
            if source.is_match("property-accessor", if_undefined=False):
                if source.is_match("property-length", if_undefined=False):
                    node = source.p(ArrayLenNode(node), start_pos=start_pos)
                    continue
                if source.is_match("property-type", if_undefined=False):
                    ...
                source.pos = save_pos
            break
        return node
    
NONTERMINALS["@Primary"] = PrimaryParser()

class MultiplicativeParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        left_node = parse("@Primary", source, pc)
        try:
            if source.is_match("binary*", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Multiplicative", source, pc)
                return source.p(BinaryNode(left_node, "*", right_node), start_pos=start_pos)
            if source.is_match("binary/", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Multiplicative", source, pc)
                return source.p(BinaryNode(left_node, "/", right_node), start_pos=start_pos)
            if source.is_match("binary%", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Multiplicative", source, pc)
                return source.p(BinaryNode(left_node, "%", right_node), start_pos=start_pos)
        except YuiError:
            pass
        source.pos = left_node.end_pos
        return left_node

NONTERMINALS["@Multiplicative"] = MultiplicativeParser()

class AdditiveParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        left_node = parse("@Multiplicative", source, pc)
        try:
            if source.is_match("binary+", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "+", right_node), start_pos=start_pos)
            if source.is_match("binary-", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "-", right_node), start_pos=start_pos)
        except YuiError:
            pass
        source.pos = left_node.end_pos
        return left_node

NONTERMINALS["@Additive"] = AdditiveParser()

class ComparativeParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        left_node = parse("@Additive", source, pc)
        try:
            if source.is_match("binary==", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "==", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binary!=", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "!=", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binary<=", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "<=", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binary>=", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, ">=", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binary<", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "<", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binary>", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, ">", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binaryin", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "in", right_node, comparative=True), start_pos=start_pos)
            if source.is_match("binarynotin", if_undefined=False, lskip_ws=True, skip_linefeed=True):
                right_node = parse("@Additive", source, pc)
                return source.p(BinaryNode(left_node, "notin", right_node, comparative=True), start_pos=start_pos)
        except YuiError:
            pass
        source.pos = left_node.end_pos
        return left_node

NONTERMINALS["@Comparative"] = ComparativeParser()

class ExpressionParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        return parse("@Comparative", source, pc)

NONTERMINALS["@Expression"] = ExpressionParser()

## Statement

class AssignmentParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('assignment-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        left_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('assignment-infix', skip_ws=True, avoid_backtrack = avoid_backtrack)
        right_node = parse("@Expression", source, pc, avoid_backtrack = avoid_backtrack)
        source.try_match('assignment-end', lskip_ws=True, avoid_backtrack = avoid_backtrack) # E E 代入もありえる
        return source.p(AssignmentNode(left_node, right_node), start_pos=start_pos)
    
NONTERMINALS["@Assignment"] = AssignmentParser()

class IncrementParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('increment-begin', skip_ws=True)       
        avoid_backtrack = source.pos > start_pos
        lvalue_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=avoid_backtrack)
        source.try_match('increment-infix', lskip_ws=True, avoid_backtrack=avoid_backtrack)
        source.try_match('increment-end', lskip_ws=True, avoid_backtrack=avoid_backtrack)
        return source.p(IncrementNode(lvalue_node), start_pos=start_pos)

NONTERMINALS["@Increment"] = IncrementParser()

class DecrementParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('decrement-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        lvalue_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack=avoid_backtrack)
        source.try_match('decrement-infix', lskip_ws=True, avoid_backtrack=avoid_backtrack)
        source.try_match('decrement-end', lskip_ws=True, avoid_backtrack=avoid_backtrack)
        return source.p(DecrementNode(lvalue_node), start_pos=start_pos)

NONTERMINALS["@Decrement"] = DecrementParser()

class AppendParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('append-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        lvalue_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('append-infix', skip_ws=True, avoid_backtrack = avoid_backtrack)
        value = parse("@Expression", source, pc, lskip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('append-suffix', lskip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('append-end', lskip_ws=True, avoid_backtrack = avoid_backtrack)
        return source.p(AppendNode(lvalue_node, value), start_pos=start_pos)

NONTERMINALS["@Append"] = AppendParser()

class BreakParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('break')
        return source.p(BreakNode(), start_pos=start_pos)
    
NONTERMINALS["@Break"] = BreakParser()

class PassParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('pass')
        return source.p(PassNode(), start_pos=start_pos)
    
NONTERMINALS["@Pass"] = PassParser()

class ReturnParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('return-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        expr_node = parse("@Expression", source, pc, avoid_backtrack=avoid_backtrack)
        source.try_match('return-end', lskip_ws=True, avoid_backtrack = avoid_backtrack)
        return source.p(ReturnNode(expr_node), start_pos=start_pos)
    
NONTERMINALS["@Return"] = ReturnParser()

class PrintExpressionParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('print-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        expr_node = parse("@Expression", source, pc, avoid_backtrack=avoid_backtrack)
        source.try_match('print-end', lskip_ws=True, avoid_backtrack = avoid_backtrack)
        return source.p(PrintExpressionNode(expr_node), start_pos=start_pos)

NONTERMINALS["@PrintExpression"] = PrintExpressionParser()

class RepeatParser(ParserCombinator):
    def match(self, source: Source, pc: dict):
        start_pos = source.pos
        source.try_match('repeat-begin', skip_ws=True)
        avoid_backtrack = source.pos > start_pos
        times_node = parse("@Expression", source, pc, skip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('repeat-times', skip_ws=True, avoid_backtrack = avoid_backtrack)
        source.try_match('repeat-block', skip_ws=True, avoid_backtrack = avoid_backtrack)
        pc = pc.copy()
        pc['indent'] = source.capture_indent()
        block_node = parse("@Block", source, pc, avoid_backtrack=True)
        source.try_match('repeat-end', lskip_ws=True, avoid_backtrack = True)
        return source.p(RepeatNode(times_node, block_node), start_pos=start_pos)

NONTERMINALS["@Repeat"] = RepeatParser()
